--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "26780916",
+   "id": "eb785710",
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +401,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "661f7f56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'original_description', 'transaction_type', 'account_name',\n",
+       "       'amount', 'description'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_transact.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "id": "5b64d423",
    "metadata": {
@@ -536,35 +559,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "d651f164",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "categories = load_yaml(\"./app/categories.yml\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "ba364bf3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "organized_cats = {}\n",
+    "for cat in categories['categories']:\n",
+    "    organized_cats[cat[\"name\"]] = cat[\"subcategories\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "5d0a67dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['amusement',\n",
+       " 'eating & drinking out',\n",
+       " 'entertainment media',\n",
+       " 'government',\n",
+       " 'grocery store',\n",
+       " 'health',\n",
+       " 'home',\n",
+       " 'insurance',\n",
+       " 'lodging',\n",
+       " 'shopping',\n",
+       " 'student loans',\n",
+       " 'transportation',\n",
+       " 'travel',\n",
+       " 'uncategorized']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(organized_cats)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "34af3d34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eating & drinking out': ['',\n",
+       "  'delivery',\n",
+       "  'resturants',\n",
+       "  'coffee shops',\n",
+       "  'bars'],\n",
+       " 'home': ['', 'rent', 'utilities', 'home items'],\n",
+       " 'grocery store': [''],\n",
+       " 'entertainment media': ['', 'movies', 'music', 'news', 'books'],\n",
+       " 'amusement': [''],\n",
+       " 'student loans': [''],\n",
+       " 'transportation': ['', 'gas', 'uber', 'public'],\n",
+       " 'lodging': ['', 'airbnb', 'hotel'],\n",
+       " 'shopping': ['', 'music', 'sports', 'clothing', 'electronics', 'durables'],\n",
+       " 'health': ['', 'doctor', 'pharmacy', 'hygene', 'gym', 'therapy'],\n",
+       " 'travel': ['', 'airplane'],\n",
+       " 'government': ['', 'taxes', 'dmv', 'tickets'],\n",
+       " 'insurance': ['', 'renters', 'auto'],\n",
+       " 'uncategorized': ['']}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "organized_cats"
+   ]
   },
   {
    "cell_type": "code",
