--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "a7887708",
    "metadata": {},
    "outputs": [
@@ -37,17 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "eb785710",
+   "execution_count": 22,
+   "id": "0a18b2fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['categories.yml', 'descriptions.yml', '__init__.py', 'main.py']"
+       "['categories.yml',\n",
+       " 'descriptions.yml',\n",
+       " '__init__.py',\n",
+       " '__pycache__',\n",
+       " 'SessionState.py',\n",
+       " 'main.py']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "ce53325f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "aa226e00",
    "metadata": {},
    "outputs": [
@@ -113,7 +118,8 @@
        "   'philz coffee',\n",
        "   'northside',\n",
        "   'origin coffee lab',\n",
-       "   'citicards cash reward'],\n",
+       "   'citicards cash reward',\n",
+       "   '7-eleven'],\n",
        "  'phrase_maps': [{'key_phrase': 'electronic funds transfer',\n",
        "    'description': 'transfer'},\n",
        "   {'key_phrase': 'Payment Thank You - Web', 'description': 'transfer'},\n",
@@ -130,7 +136,7 @@
        "    'description': 'foreign exchange fee'}]}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "46873616",
    "metadata": {},
    "outputs": [],
@@ -221,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "4ba78f30",
    "metadata": {
     "scrolled": false
@@ -388,7 +394,7 @@
        "1163  CHASE COLLEGE   74.00  Citicards Cash Reward  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,8 +407,494 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "5467408b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>original_description</th>\n",
+       "      <th>description</th>\n",
+       "      <th>transaction_type</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>account_name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/02/2020</td>\n",
+       "      <td>7-ELEVEN ARLINGTON VA</td>\n",
+       "      <td>7-Eleven</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>6.88</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "      <td>eating &amp; drinking out</td>\n",
+       "      <td>resturants</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/02/2020</td>\n",
+       "      <td>QuickPay with Zelle payment to I</td>\n",
+       "      <td>QuickPay with Zelle payment to I</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>1190.00</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "      <td>grocery store</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/02/2020</td>\n",
+       "      <td>REMOTE ONLINE DEPOSIT #</td>\n",
+       "      <td>Remote Online Deposit</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>450.00</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "      <td>transportation</td>\n",
+       "      <td>uber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/02/2020</td>\n",
+       "      <td>USAA P&amp;C EXT AUTOPAY 1896</td>\n",
+       "      <td>Usaa</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>71.29</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "      <td>travel</td>\n",
+       "      <td>airplane</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/03/2020</td>\n",
+       "      <td>APPLE.COM/BILL 866-712-7753 CA</td>\n",
+       "      <td>APPLE.COM/BILL 866-712-7753 CA</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "      <td>government</td>\n",
+       "      <td>dmv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date              original_description  \\\n",
+       "0  1/02/2020             7-ELEVEN ARLINGTON VA   \n",
+       "1  1/02/2020  QuickPay with Zelle payment to I   \n",
+       "2  1/02/2020           REMOTE ONLINE DEPOSIT #   \n",
+       "3  1/02/2020         USAA P&C EXT AUTOPAY 1896   \n",
+       "4  1/03/2020    APPLE.COM/BILL 866-712-7753 CA   \n",
+       "\n",
+       "                        description transaction_type   amount   account_name  \\\n",
+       "0                          7-Eleven            debit     6.88  CHASE COLLEGE   \n",
+       "1  QuickPay with Zelle payment to I            debit  1190.00  CHASE COLLEGE   \n",
+       "2             Remote Online Deposit           credit   450.00  CHASE COLLEGE   \n",
+       "3                              Usaa            debit    71.29  CHASE COLLEGE   \n",
+       "4    APPLE.COM/BILL 866-712-7753 CA            debit    29.99  CHASE COLLEGE   \n",
+       "\n",
+       "                category subcategory  \n",
+       "0  eating & drinking out  resturants  \n",
+       "1          grocery store         NaN  \n",
+       "2         transportation        uber  \n",
+       "3                 travel    airplane  \n",
+       "4             government         dmv  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorized = pd.read_csv(PATH_TO_CATEGORIZED + \"transactions.csv\")\n",
+    "categorized.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3fe84026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_description_category_map(categorized):\n",
+    "    \"\"\"gets a mapping from pretty descriptions to most common category substring\n",
+    "    previously categorized transactions\"\"\"\n",
+    "\n",
+    "    descript_cat_map = {}\n",
+    "\n",
+    "    # get count of category/subcategory per description\n",
+    "    cat_count = categorized.groupby(\n",
+    "        [\"description\", \"category\", \"subcategory\"],\n",
+    "        as_index = False\n",
+    "    ).date.count()\n",
+    "\n",
+    "    cat_count.rename(columns={\"date\":\"count\"}, inplace=True)\n",
+    "\n",
+    "    # sort by cat count descending\n",
+    "    cat_count.sort_values([\"description\", \"count\"], ascending = False)\n",
+    "\n",
+    "    # row order partitioned by description\n",
+    "    cat_count[\"row_num\"] = cat_count.groupby(\"description\").cumcount() + 1\n",
+    "\n",
+    "    # first row\n",
+    "    cat_count.loc[cat_count[\"row_num\"] == 1, [\"description\", \"category\", \"subcategory\"]]\n",
+    "\n",
+    "    for index, row in cat_count.iterrows():\n",
+    "        descript_cat_map[row[\"description\"]] = {\n",
+    "            \"category\": row[\"category\"],\n",
+    "            \"subcategory\": row[\"subcategory\"]\n",
+    "            }\n",
+    "\n",
+    "    return descript_cat_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a1c1b2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "description_category_map = get_description_category_map(categorized)\n",
+    "categories = load_yaml(\"./app/categories.yml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c077f7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "PATH_TO_CATEGORIES = \"./app/categories.yml\"\n",
+    "\n",
+    "\n",
+    "def load_categories():\n",
+    "    cats_yaml = load_yaml(PATH_TO_CATEGORIES)\n",
+    "    categories = {}\n",
+    "    for cat in cats_yaml['categories']:\n",
+    "        categories[cat[\"name\"]] = cat[\"subcategories\"]\n",
+    "    return categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "f010a3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eating & drinking out': ['',\n",
+       "  'delivery',\n",
+       "  'resturants',\n",
+       "  'coffee shops',\n",
+       "  'bars'],\n",
+       " 'home': ['', 'rent', 'utilities', 'home items'],\n",
+       " 'grocery store': [''],\n",
+       " 'entertainment media': ['', 'movies', 'music', 'news', 'books'],\n",
+       " 'amusement': [''],\n",
+       " 'student loans': [''],\n",
+       " 'transportation': ['', 'gas', 'uber', 'public'],\n",
+       " 'lodging': ['', 'airbnb', 'hotel'],\n",
+       " 'shopping': ['', 'music', 'sports', 'clothing', 'electronics', 'durables'],\n",
+       " 'health': ['', 'doctor', 'pharmacy', 'hygene', 'gym', 'therapy'],\n",
+       " 'travel': ['', 'airplane'],\n",
+       " 'government': ['', 'taxes', 'dmv', 'tickets'],\n",
+       " 'insurance': ['', 'renters', 'auto'],\n",
+       " 'uncategorized': ['']}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = load_categories()\n",
+    "categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "159ea4ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['', 'delivery', 'resturants', 'coffee shops', 'bars']]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x[\"subcategories\"] for x in categories[\"categories\"] if x[\"name\"] == 'eating & drinking out']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "062a17a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'7-Eleven': {'category': 'eating & drinking out',\n",
+       "  'subcategory': 'resturants'},\n",
+       " 'APPLE.COM/BILL 866-712-7753 CA': {'category': 'government',\n",
+       "  'subcategory': 'dmv'},\n",
+       " 'Remote Online Deposit': {'category': 'transportation',\n",
+       "  'subcategory': 'uber'},\n",
+       " 'Usaa': {'category': 'travel', 'subcategory': 'airplane'}}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "description_category_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "bc492845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lookup_category(descr, description_category_map, categories):\n",
+    "    if descr in description_category_map.keys():\n",
+    "        category = description_category_map[descr][\"category\"]\n",
+    "        subcategory = description_category_map[descr][\"subcategory\"]\n",
+    "        # find index of category in ss.categories\n",
+    "        cat_list = list(categories.keys())\n",
+    "        print(cat_list)\n",
+    "        cat_index = cat_list.index(category)\n",
+    "        subcat_list = categories[category]\n",
+    "        print(subcat_list)\n",
+    "        subcat_index = subcat_list.index(subcategory)\n",
+    "        return cat_index, subcat_index\n",
+    "    else:\n",
+    "        return 0, 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "17ab6431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['eating & drinking out', 'home', 'grocery store', 'entertainment media', 'amusement', 'student loans', 'transportation', 'lodging', 'shopping', 'health', 'travel', 'government', 'insurance', 'uncategorized']\n",
+      "['', 'delivery', 'resturants', 'coffee shops', 'bars']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 2)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup_category(\"7-Eleven\", description_category_map, categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d21c557",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1854a315",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d523e98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2573568b",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "g1 = raw_transact.groupby([\"description\", \"original_description\"], as_index = False).date.count().sort_values([\"description\", \"original_description\"])\n",
+    "g2 = g1.groupby(['description'])\n",
+    "g1['bleh'] =  g2['date'].rank(method = \"max\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "80834517",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "g3 = g1.groupby([\"description\", \"bleh\"]).rank(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f83d59fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>original_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>count_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0031 MCLEAN MCLEAN VA</td>\n",
+       "      <td>0031 MCLEAN MCLEAN VA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18TH STREET LOUNGE WASHINGTON DC</td>\n",
+       "      <td>18TH STREET LOUNGE WASHINGTON DC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1WSHGTN NTNLS 15625130 WASHINGTO</td>\n",
+       "      <td>1WSHGTN NTNLS 15625130 WASHINGTO</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2097-CLT TRIP ADVISOR CHARLOTTE</td>\n",
+       "      <td>2097-CLT TRIP ADVISOR CHARLOTTE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2COCOM*TAL-SOFTWARE.CO 888-24716</td>\n",
+       "      <td>2COCOM*TAL-SOFTWARE.CO 888-24716</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        description              original_description  date  \\\n",
+       "0             0031 MCLEAN MCLEAN VA             0031 MCLEAN MCLEAN VA     1   \n",
+       "1  18TH STREET LOUNGE WASHINGTON DC  18TH STREET LOUNGE WASHINGTON DC     1   \n",
+       "2  1WSHGTN NTNLS 15625130 WASHINGTO  1WSHGTN NTNLS 15625130 WASHINGTO     1   \n",
+       "3   2097-CLT TRIP ADVISOR CHARLOTTE   2097-CLT TRIP ADVISOR CHARLOTTE     1   \n",
+       "4  2COCOM*TAL-SOFTWARE.CO 888-24716  2COCOM*TAL-SOFTWARE.CO 888-24716     1   \n",
+       "\n",
+       "   count_rank  \n",
+       "0         1.0  \n",
+       "1         1.0  \n",
+       "2         1.0  \n",
+       "3         1.0  \n",
+       "4         1.0  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
-   "id": "661f7f56",
+   "id": "d68c3ba3",
    "metadata": {},
    "outputs": [
     {
