dates sorted, categories updated

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "a7887708",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,12 @@
     "import yaml\n",
     "from pandas.core.common import SettingWithCopyWarning\n",
     "\n",
+    "import re\n",
+    "import os\n",
+    "from os import path\n",
+    "import shutil\n",
+    "from app.global_constants import *\n",
+    "\n",
     "import time\n",
     "warnings.simplefilter(action=\"ignore\", category=SettingWithCopyWarning)\n",
     "\n",
@@ -39,7 +45,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
+   "id": "cae121c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_mint_trans():\n",
+    "    # check that there is only one file in mint folder\n",
+    "    mint_files = os.listdir(PATH_TO_MINT_FOLDER)\n",
+    "\n",
+    "    if len(mint_files) == 1:\n",
+    "        df = pd.read_csv(PATH_TO_MINT_FOLDER + mint_files[0])\n",
+    "        df.columns = [to_snake(col) for col in df.columns]\n",
+    "\n",
+    "        # remove repeated white space characters\n",
+    "        df['original_description'] = df['original_description'].apply(lambda txt: ' '.join(txt.split()))\n",
+    "\n",
+    "        # group by all values to aggregate duplicate transactions\n",
+    "        group_df = df.groupby([\"date\", \"original_description\", \"transaction_type\", \"account_name\"], as_index = False).amount.sum()\n",
+    "\n",
+    "        group_df[\"amount\"] = group_df[\"amount\"].round(2)\n",
+    "\n",
+    "        return group_df[RAW_TRANSACT_SCHEMA]\n",
+    "\n",
+    "    else:\n",
+    "        return None\n",
+    "        print(\"Mint folder needs attention!\")\n",
+    "\n",
+    "\n",
+    "def load_raw_trans():\n",
+    "    # load individual sources of raw transactions\n",
+    "    mint_df = load_mint_trans()\n",
+    "    amzn_df = load_amzn_trans()\n",
+    "\n",
+    "    #union together\n",
+    "    raw_trans = pd.concat([mint_df, amzn_df])\n",
+    "    \n",
+    "    raw_trans[\"date\"] = raw_trans[\"date\"].apply(lambda x: pd.to_datetime(x))\n",
+    "\n",
+    "    return raw_trans\n",
+    "\n",
+    "\n",
+    "def load_amzn_trans():\n",
+    "    # check that there is only one file in mint folder\n",
+    "    amzn_files = os.listdir(PATH_TO_AMAZON_FOLDER)\n",
+    "\n",
+    "    if len(amzn_files) == 1:\n",
+    "        df = pd.read_csv(PATH_TO_AMAZON_FOLDER + amzn_files[0])\n",
+    "        df.columns = [to_snake(col) for col in df.columns]\n",
+    "        df[\"original_description\"] = (\"AMZN: \" + df[\"title\"] + \" \" + df[\"category\"]).fillna(\"AMZN: unknown item / return\")\n",
+    "        df[\"account_name\"] = \"AMAZON\"\n",
+    "        df[\"amount\"] = df[\"item_total\"].apply(lambda x: float(x.replace(\"$\", \"\")))\n",
+    "        df[\"transaction_type\"] = \"debit\"\n",
+    "        df.rename(columns =\n",
+    "                  {\"order_date\": \"date\",\n",
+    "                  }, inplace = True)\n",
+    "\n",
+    "        return df[RAW_TRANSACT_SCHEMA]\n",
+    "\n",
+    "    else:\n",
+    "        return None\n",
+    "        print(\"Amazon folder needs attention!\")\n",
+    "\n",
+    "\n",
+    "def load_yaml(path):\n",
+    "    with open(path, \"r\") as stream:\n",
+    "        try:\n",
+    "            return yaml.safe_load(stream)\n",
+    "        except yaml.YAMLError as exc:\n",
+    "            print(exc)\n",
+    "\n",
+    "\n",
+    "def to_snake(txt):\n",
+    "    words = txt.lower().split(\" \")\n",
+    "    return \"_\".join(words)\n",
+    "\n",
+    "\n",
+    "def get_transact_keys(df):\n",
+    "    return df[TRANSACT_KEY_COLS].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "81eee5bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>original_description</th>\n",
+       "      <th>transaction_type</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>account_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1275</th>\n",
+       "      <td>2021-07-05</td>\n",
+       "      <td>AUTH : TST* NORTHSIDE SOCIAL COF</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>6.78</td>\n",
+       "      <td>Fidelity Rewards Visa Signature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1273</th>\n",
+       "      <td>2021-07-04</td>\n",
+       "      <td>AUTH : SHEETZ 0144</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>Fidelity Rewards Visa Signature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1272</th>\n",
+       "      <td>2021-07-04</td>\n",
+       "      <td>AUTH : HARRIS TEETER #0083</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>65.35</td>\n",
+       "      <td>Fidelity Rewards Visa Signature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1271</th>\n",
+       "      <td>2021-07-03</td>\n",
+       "      <td>AUTH : T.J. MAXX #1459</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>5.29</td>\n",
+       "      <td>Fidelity Rewards Visa Signature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1270</th>\n",
+       "      <td>2021-07-03</td>\n",
+       "      <td>AUTH : SQ *BREAD &amp; WATER COMP</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>Fidelity Rewards Visa Signature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>2018-05-01</td>\n",
+       "      <td>REMOTE ONLINE DEPOSIT #1</td>\n",
+       "      <td>credit</td>\n",
+       "      <td>200.00</td>\n",
+       "      <td>CHASE COLLEGE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>2018-04-22</td>\n",
+       "      <td>AMZN: Legere Tsss 2.5 Tenor Saxophone Signatur...</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>AMAZON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>AMZN: The God Delusion ABIS_BOOK</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>AMAZON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>AMZN: God Is Not Great: How Religion Poisons E...</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>AMAZON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>AMZN: The End of Faith: Religion, Terror, and ...</td>\n",
+       "      <td>debit</td>\n",
+       "      <td>10.61</td>\n",
+       "      <td>AMAZON</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2074 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date                               original_description  \\\n",
+       "1275 2021-07-05                   AUTH : TST* NORTHSIDE SOCIAL COF   \n",
+       "1273 2021-07-04                                 AUTH : SHEETZ 0144   \n",
+       "1272 2021-07-04                         AUTH : HARRIS TEETER #0083   \n",
+       "1271 2021-07-03                             AUTH : T.J. MAXX #1459   \n",
+       "1270 2021-07-03                      AUTH : SQ *BREAD & WATER COMP   \n",
+       "...         ...                                                ...   \n",
+       "918  2018-05-01                           REMOTE ONLINE DEPOSIT #1   \n",
+       "303  2018-04-22  AMZN: Legere Tsss 2.5 Tenor Saxophone Signatur...   \n",
+       "300  2018-01-21                   AMZN: The God Delusion ABIS_BOOK   \n",
+       "301  2018-01-21  AMZN: God Is Not Great: How Religion Poisons E...   \n",
+       "302  2018-01-21  AMZN: The End of Faith: Religion, Terror, and ...   \n",
+       "\n",
+       "     transaction_type  amount                     account_name  \n",
+       "1275            debit    6.78  Fidelity Rewards Visa Signature  \n",
+       "1273            debit    5.30  Fidelity Rewards Visa Signature  \n",
+       "1272            debit   65.35  Fidelity Rewards Visa Signature  \n",
+       "1271            debit    5.29  Fidelity Rewards Visa Signature  \n",
+       "1270            debit    4.95  Fidelity Rewards Visa Signature  \n",
+       "...               ...     ...                              ...  \n",
+       "918            credit  200.00                    CHASE COLLEGE  \n",
+       "303             debit   71.60                           AMAZON  \n",
+       "300             debit    8.00                           AMAZON  \n",
+       "301             debit    9.37                           AMAZON  \n",
+       "302             debit   10.61                           AMAZON  \n",
+       "\n",
+       "[2074 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mint_df = load_raw_trans()\n",
+    "mint_df.sort_values(\"date\", ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "aec00f86",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      01/02/2020\n",
+       "1      01/02/2020\n",
+       "2      01/02/2020\n",
+       "3      01/02/2020\n",
+       "4      01/03/2020\n",
+       "          ...    \n",
+       "387    11/24/2018\n",
+       "388    12/03/2018\n",
+       "389    12/03/2018\n",
+       "390    12/03/2018\n",
+       "391    12/03/2018\n",
+       "Name: date, Length: 2074, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mint_df[\"date\"].dt.strftime('%m/%d/%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0a51d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "8e311b62",
    "metadata": {},
    "outputs": [],
